<resources>
    <string name="app_name" translatable="false">SmartCrutch</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="uuid">Uuid</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_save">Save</string>
    <string name="error_username_empty">Please input username</string>
    <string name="error_password_empty">Please input password</string>
    <string name="error_uuid_empty">Please input uuid</string>
    <string name="error_user_not_exist">User not exist</string>
    <string name="error_password_incorrect">Incorrect password</string>
    <string name="error_network">Network error</string>
    <string name="error_validation">Validation error</string>
    <string name="error_invalid_uuid">Invalid uuid</string>
    <string name="error_uuid_not_initialize">Uuid not initialize</string>
    <string name="error_uuid_once_binded">Uuid once binded</string>
    <string name="error_username_once_used">Username once used</string>
    <string name="app_short_info" translatable="false">SmartCrutch App %s</string>
    <string name="login_success">Login success</string>
    <string name="register_success">Register success</string>
    <string name="update_settings_success">Update_settings success</string>
    <string name="text_view_dashboard">SmartCrutch</string>
    <string name="back_again_to_exit">Please click BACK again to exit</string>
    <string name="toast_require_login">Please login</string>
    <string name="button_view_map">View Map</string>
    <string name="button_launch_settings">Settings</string>
    <string name="button_launch_about">About</string>
    <string name="user_info_text_view" translatable="false">UUID: %s</string>
    <string name="status_loading">Loading</string>
    <string name="status_info_loading">Communicating with server …</string>
    <string name="status_ok">OK</string>
    <string name="status_info_ok">SmartCrutch is running …</string>
    <string name="status_emergency">EMERGENCY</string>
    <string name="status_info_emergency">Crutch has detected a collision!</string>
    <string name="status_offline">Offline</string>
    <string name="status_info_offline">Cannot connect to crutch</string>
    <string name="status_network_err">Network Error</string>
    <string name="no_location_info">No Location Info</string>
    <string name="no_location">Unable to get the location</string>
    <string name="button_monitor">Remote Monitor</string>
    <string name="button_logout">Logout</string>
    <string name="location_latlng">Latitude: %1$.2f, Longitude: %2$.2f</string>
    <string name="unknown_location">Unknown location</string>
    <string name="crutch_marker_tag">Your crutch</string>
    <string name="button_cancel">Cancel</string>
    <string name="about_title">About</string>
    <string name="channel_name">Emergency notification</string>
    <string name="channel_description">There is an emergency</string>
    <string name="continuous_monitor">Continuous Monitor</string>
    <string name="present_view">Present View: FrontView</string>
    <string name="button_front_view">Front View</string>
    <string name="button_back_view">Back  View</string>
<!--    <string name="present_view" translatable="false">\nSmartCrutch App v%s\n-->
    <string name="about_content" translatable="false">\nSmartCrutch App v%s\n
By @DeltaZero (https://github.com/233a344a455)\n\n
Project repo: https://github.com/SZ2G-RoboticsClub/SmartCrutch-Android-App (Currently private)\n\n
Copyright © 2021 DeltaZero, All rights reserved.\n</string>
    <string name="map_activity_title">Map</string>
    <string name="crutch_settings_subtitle">Crutch Settings</string>
    <string name="emergency_tel">Emergency Tel.</string>
    <string name="click_to_set">Click to set</string>
    <string name="home_location">Home Location</string>
    <string name="app_settings_subtitle">APP Settings</string>
    <string name="language">Language</string>
    <string name="settings_activity_title">Settings</string>
    <string name="error_login_expired">Login expired, please login again</string>
    <string name="language_zh" translatable="false">Simplified Chinese | 简体中文</string>
    <string name="language_en" translatable="false">English | 英语</string>
    <string name="confirm_logout_title">Confirm logout</string>
    <string name="confirm_logout">Are you sure to logout?</string>
    <string name="easter_egg_activity_title">Found easter egg !!!</string>
</resources>