<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/crutch_settings_subtitle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/Blue" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setEmergencyTel">

                <TextView
                    android:id="@+id/settings_tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/emergency_tel"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                <TextView
                    android:id="@+id/settings_tv_phone_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_tv_phone"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/clink_to_set" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setHomeLoc">

                <TextView
                    android:id="@+id/settings_tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/home_location"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                <TextView
                    android:id="@+id/settings_tv_home_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_tv_home"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/clink_to_set" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setPassword">

                <TextView
                    android:id="@+id/settings_tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                <TextView
                    android:id="@+id/settings_tv_password_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_tv_password"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/clink_to_set" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/app_settings_subtitle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/Blue" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setLanguage">

                <TextView
                    android:id="@+id/settings_tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/language"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                <TextView
                    android:id="@+id/settings_tv_language_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_tv_language"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/clink_to_set" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>